bugsssss on iOS

--- a/public/canvas/hello2/style.css
+++ b/public/canvas/hello2/style.css
@@ -9,6 +9,11 @@ p{
   font-weight: bold;
 }
 
+.text{
+  font-family: "FuturaLT",Gadget, sans-serif;
+  font-weight: bold;
+}
+
 html, body {
   font-family: "FuturaLT",Gadget, sans-serif;
   font-weight: bold;
